# RouteX

./: .gitattributes  .gitignore  .tmp-mihomo-v1.19.23.html  Ctempmaster_app.tsx  README.md  audit-after-2.json  audit-after.json  audit-result.json  audit.json  audit.txt  audit_cmd.txt  audit_cmd2.txt  audit_report.json  audit_utf8.json  changelog.md  commit-editor-v2.js  commit-editor.js  complete-fix.bat  electron-builder.config.cjs  electron-builder.yml  electron.vite.config.ts  eslint.config.cjs  fix-version.bat  git_history.txt  git_history_broad.txt  git_history_utf8.txt  git_log.txt  git_log2.txt  how HEAD --name-only  implementation_plan.md  install_log.txt  lint-output.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rebase-editor.js  release-notes.md  release.bat  reproduce_issue.ts  reproduce_loop.js  (+14 more)
.agent/rules/: memory_sync.md  rulesworkspace.md
.ai_memory/: 1_project_context.md  2_active_task.md  2_work_log.md  3_work_log.md  implementation_plan.md
.github/: release-template.md
.github/ISSUE_TEMPLATE/: bug_report_zh.yml  feature_request_zh.yml
.github/workflows/: auto-build.yml  auto-release.yml  build.yml  issues.yml  manual-release.yml  tauri-auto-build.yml  ui-redesign-release.yml
.kiro/specs/: proxy-traffic-stats-requirements.md
.tocodex/plans/: 2026-04-24_14-22-35_已确认最小修复方案-计划如下-1-收敛事件桥启动状态.md  2026-04-24_14-30-32_已完成静态勘察-建议按最小闭环先实施-p0-中收益最高且改动.md  tauri-function-coverage-and-performance-review.md  tun-startup-speed-plan.md
.tocodex/progress/: 019dbee1-7f84-7209-b0bb-f3da136491cf.json  019dbefd-1e1a-733b-85e8-87a88eaefaa1.json  019dbfe4-87fa-7127-88f3-a82a2a6a1f67.json  019dc76e-bf65-7454-a81a-b2e5bc69fea1.json  019dc76e-bf74-73d0-ba37-543d0359f9b4.json
aur/routex-bin/: PKGBUILD
aur/routex-electron-bin/: PKGBUILD  routex.sh
docs/: tauri-migration-status.md  tauri-rewrite-plan.md
resources/: icon.icns
scripts/: check-dead-code.mjs  check-ipc-contract.mjs  check-node-audit.mjs  check-release-env.mjs  check-rust-audit.mjs  ensure-tauri-dev-server.mjs  extract-latest-changelog.mjs  generate-tauri-updater-manifest.mjs  install-metacubexd.ps1  patch-autobuild.mjs  prepare.mjs  profile-updater-regression.ts  release.js  sync-default-theme.mjs  updater.mjs  write-release-tauri-config.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json  shell-surfaces.json
src-tauri/permissions/: desktop.toml
src-tauri/resources/themes/: routex-blue-glass.css
src-tauri/src/: desktop.rs  main.rs
src-tauri/src/desktop/: app.rs  common.rs  config_store.rs  constants.rs  core_process.rs  data_migration.rs  diagnostics.rs  dialogs.rs  dns.rs  error.rs  foundation.rs  fs_utils.rs  geo_detection.rs  gist.rs  icons.rs  ipc.rs  models.rs  monitors.rs  network_control.rs  profiles.rs  resources.rs  runtime_config.rs  runtime_dir.rs  runtime_logs.rs  service_client.rs  service_config.rs  service_lifecycle.rs  service_permissions.rs  service_startup.rs  service_tasks.rs  shell_app_menu.rs  shell_icons.rs  shell_shortcuts.rs  shell_surfaces.rs  shell_tray_actions.rs  shell_tray_menu.rs  shell_window.rs  startup.rs  tests.rs  traffic_monitor.rs  (+2 more)
src-tauri/src/desktop/core_process/: api_client.rs  config_normalize.rs  lifecycle.rs  readiness.rs  start_error.rs
src-tauri/src/desktop/diagnostics/: geoip.rs  http.rs  proxy_groups.rs  rules.rs  runtime_io.rs  streaming.rs
src-tauri/src/desktop/foundation/: config_merger.rs  defaults.rs  override_fs.rs  profile_fs.rs  quick_rules.rs  runtime_cache.rs  sys_env.rs  themes.rs
src-tauri/src/desktop/ipc/: config.rs  config_app.rs  config_chains.rs  config_overrides.rs  config_profiles.rs  config_quick_rules.rs  mihomo.rs  network.rs  shell.rs  system.rs
src-tauri/src/desktop/profiles/: mod.rs  network.rs  overrides.rs  parser.rs  store.rs  updater.rs
src-tauri/src/desktop/service/: admin_relaunch.rs  autorun.rs  elevation.rs  mod.rs  schtasks.rs  startup_dialog.rs  startup_flow.rs  task_paths.rs  task_xml.rs
(+389 files in other folders)
