[package]
name = "routex"
version = "4.1.0"
description = "RouteX Tauri shell"
authors = ["Jarv1s0"]
edition = "2021"
default-run = "routex"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
boa_engine = "0.21.1"
ctrlc = "3.4"
get_if_addrs = "0.5.3"
quick-xml = "0.38"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "query", "rustls"] }
ring = "0.17.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-global-shortcut = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
urlencoding = "2"
walkdir = "2"
zip = { version = "4.6", default-features = false, features = ["deflate-flate2"] }

[target."cfg(any(target_os = \"windows\", target_os = \"macos\", target_os = \"linux\"))".dependencies]
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
panic = "abort"
